--- a/ch3/docs/3. 자바스크립트 데이터 타입과 연산자 (1).md
+++ b/ch3/docs/3. 자바스크립트 데이터 타입과 연산자 (1).md
@@ -1,4 +1,4 @@
-# 3. 자바스크립트 데이터 타입과 연산자
+# 3. 자바스크립트 데이터 타입과 연산자 (1)
 모든 언어의 기본은 데이터 타입을 파악하는 것에서부터 시작.
 자바스크립트의 값들은 크게 기본 타입과 참조 타입으로 나뉜다.
 
@@ -129,8 +129,6 @@ var nullVar = null;
 console.log(typeof nullVar === null); // (출력값) false
 console.log(nullVar === null);        // (출력값) true
 ```
-
-# 3.2 자바스크립트 참조 타입(객체 타입)
 
 
 #책/인사이드자바스크립트
